// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render align 1`] = `
<div
  className="12kp2av"
>
  Hello
</div>
`;

exports[`should render align 2`] = `
".12kp2av {
  text-align: center
}"
`;

exports[`should render bold size 1`] = `
<div
  className="e0qi9f"
>
  Hello
</div>
`;

exports[`should render bold size 2`] = `
"
.e0qi9f {
  font-size: 1rem;
  font-weight: 700
}"
`;

exports[`should render lowercase 1`] = `
<div
  className="1ez8i2i"
>
  Hello
</div>
`;

exports[`should render lowercase 2`] = `
".1ez8i2i {
  text-transform: lowercase
}"
`;

exports[`should render normal size 1`] = `
<div
  className="jgz5pd"
>
  Hello
</div>
`;

exports[`should render normal size 2`] = `
"
.jgz5pd {
  font-size: 1rem
}"
`;

exports[`should render semi-bold size 1`] = `
<div
  className="z310y"
>
  Hello
</div>
`;

exports[`should render semi-bold size 2`] = `
"
.z310y {
  font-size: 1rem;
  font-weight: 600
}"
`;

exports[`should render small size 1`] = `
<div
  className="xk5sq7"
>
  Hello
</div>
`;

exports[`should render small size 2`] = `
"
.xk5sq7 {
  line-height: 1.3;
  font-size: 0.8em
}"
`;

exports[`should render titlecase case 1`] = `
<div
  className="w04jx1"
>
  Hello
</div>
`;

exports[`should render titlecase case 2`] = `
"
.w04jx1:first-letter {
  text-transform: capitalize
}"
`;

exports[`should render type 1`] = `
<div
  className="1vjexbg"
>
  Hello
</div>
`;

exports[`should render type 2`] = `
".1vjexbg {
  color: #434148
}"
`;
